--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <link href= "./resources/css/style.css" type="text/css" rel="stylesheet" >
   </head>
   <body>
+
+    <div>
     <h1> Discover hidden places in the world around you</h1>
+    <h4>Download Excursion (Coming soon!)</h4>
+    <p><video src= "./resources/css/video/excursion.mp4" controls>Excursion</video></p>
+    <h2>Your personal travel guide</h2>
+    <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+    <p><img src= "./resources/css/images/camp.jpg" alt="camp"><p>
+    <p><img src= "./resources/css/images/phone.png" alt="phone"><p>
+    <h2>Coming soon for Iphone and Android</h2>
+    <h3>Excursion</h3>
+
+  </div>
 
   </body>
 </html>
