--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p><img src= "./resources/css/images/camp.jpg" alt="camp"><p>
     <p><img src= "./resources/css/images/phone.png" alt="phone"><p>
     <h2>Coming soon for Iphone and Android</h2>
-    <h3>Excursion</h3>
+    <h3 id="right"> ©Excursion</h3>
 
   </div>
 
